[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["http2"] }
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.107"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres"] }
