[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.196", features = ["derive"] }
serde-aux = "4.4.0"
serde_json = "1.0.114"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres"] }
